tests/objects/objects.exp
Error ----------------------------------------------------- compatibility.js:3:9

Cannot assign `y` to `x` because:
 - in property `x`, property `bar` is missing in object type but exists in
   object type.
 - in property `x`, property `foo` is missing in object type but exists in
   object type.


Error ----------------------------------------------------- compatibility.js:7:9

Cannot assign `y` to `x` because in property `foo`, number is incompatible with
string.


Error ---------------------------------------------------- compatibility.js:11:9

Cannot assign `y` to `x` because in property `x.foo`, number is incompatible
with string.


Error ---------------------------------------------------- compatibility.js:15:9

Cannot assign `y` to `x` because in property `foo`, number is incompatible with
string.


Error ---------------------------------------------------- compatibility.js:19:9

Cannot assign `y` to `x` because in property `x.foo`, number is incompatible
with string.


Error ---------------------------------------------------- compatibility.js:23:9

Cannot assign `y` to `x` because in property `foo`, string is incompatible with
number.


Error ---------------------------------------------------- compatibility.js:27:9

Cannot assign `y` to `x` because in property `x.foo`, number is incompatible
with string.


Error ------------------------------------------------------- conversion.js:10:2

Cannot cast `Object(...)` to `Number` because object type is incompatible with
`Number`.


Error ------------------------------------------------------- conversion.js:19:4

Cannot call `z.charAt` because property `charAt` is missing in `Number`.


Error ----------------------------------------------------------- objects.js:4:4

Cannot get `x.foo` because property `foo` is missing in object type.


Error ----------------------------------------------------------- objects.js:5:4

Cannot get `x['foo']` because property `foo` is missing in object type.


Error ----------------------------------------------------------- objects.js:7:2

Cannot cast `x.bar` to boolean because string is incompatible with boolean.


Error ----------------------------------------------------------- objects.js:8:2

Cannot cast `x['123']` to boolean because string is incompatible with boolean.


Error ---------------------------------------------------------- objects.js:9:12

Cannot assign `false` to `x['123']` because boolean is incompatible with string.


Error ---------------------------------------------------------- objects.js:12:4

Cannot get `x[`...`]` because property `foo` is missing in object type.


Error --------------------------------------------------------- objects.js:15:12

Cannot assign `123` to `y['foo']` because number is incompatible with string.


Error ---------------------------------------------------------- objects.js:16:3

Cannot assign `'abc'` to `y['bar']` because property `bar` is missing in object
type.


Error ---------------------------------------------------------- objects.js:18:2

Cannot cast `y['hasOwnProperty']` to string because function type is
incompatible with string.


Error ------------------------------------------------ unaliased_assign.js:20:10

Cannot assign `obj` to `glob` because in property `x`, number is incompatible
with string.



Found 20 errors
